--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,32 @@
   "env": {
     "OPENAI_API_KEY": "@openai_api_key",
     "TELEGRAM_BOT_TOKEN": "@telegram_bot_token",
-    "TELEGRAM_ADMIN_USER_ID": "@telegram_admin_user_id"
-  }
+    "TELEGRAM_ADMIN_USER_ID": "@telegram_admin_user_id",
+    "KV_URL": "@kv_url",
+    "KV_REST_API_URL": "@kv_rest_api_url",
+    "KV_REST_API_TOKEN": "@kv_rest_api_token",
+    "KV_REST_API_READ_ONLY_TOKEN": "@kv_rest_api_read_only_token"
+  },
+  "functions": {
+    "api/telegram/webhook": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "build": {
+    "env": {
+      "NEXT_PUBLIC_BASE_URL": "@next_public_base_url"
+    }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
+  ]
 }
